vlib/v/checker/tests/inout/struct_unknown_field.out
vlib/v/checker/tests/inout/struct_unknown_field.v:8:9: error: unknown field `bar` in struct literal `Test`
    6|     t := Test{
    7|         foo: true
    8|         bar: false
               ^
    9|     }
   10| }
